@@ -3,17 +3,22 @@
 ********************
 
 
-offene punkte
+OFFENE PUNKTE
 
-noid generation nicht besprochen kein punkt dazu ... soll der minter umgestellt werden
+NOID GENERATION NICHT BESPROCHEN KEIN PUNKT DAZU ... 
+SOLL DER MINTER UMGESTELLT WERDEN
 
-kann zheng sein tool serial .aip rekursiv durchgehen
+KANN ZHENG SEIN TOOL SERIAL .AIP REKURSIV DURCHGEHEN
 
-wie verfahren wir mit nicht sortierbaren pages
+WIE VERFAHREN WIR MIT NICHT SORTIERBAREN PAGES
 
-erkennen von serials
+ERKENNEN VON SERIALS
 
-testdaten f. serials
+TESTDATEN F. SERIALS
+
+PAGETYPE AKTUELL IMMER PAGE, WOHER BESTIMMEN?
+
+KEIN AUTO INCREMENT
 
 
 ----------------------------
