@@ -7,6 +7,10 @@
 
 
 
+PAGETYPE NOW DYNAMIC, DERIVED FROM FILENAME PARTS
+
+ADDED PAGETYPE TO OLEF PAGE OBJECTS AS DESIRED
+
 OLEF TESTS 
 
 FIX: OLEF MISMATCH AND TERMINATION WHILE ADDING TO METS FIXED
@@ -17,9 +21,9 @@ BASIC SUPPORT FOR SERIALS AND THEIR REALTIONSHIPS
 
 PARTIAL DATABASE REBUILD FOR CHANGES BELOW IN PRODUCTION, PRESERVING MANAGED CONTENT
 
-GUI CHANGED TO UTF-8 (utf8_general_ci)
+GUI HEADERS CHANGED TO UTF-8 
 
-ALL DATABASE TABLES CHANGED TO UTF-8
+ALL DATABASE TABLES CHANGED TO UTF-8 (utf8_general_ci)
 
 FIX: SOFT REFRESH WITHOUT CONFIRM FOR RELOAD PAGE (E.G. FIREFOX)
 
